app/assets/stylesheets/master.css.scss
h1, h2, h3, h4, h5, h6 {
  margin:0;
  padding:0;
}

body {
  background: url('/assets/ecailles.png');
  font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
}

.clear {
  clear: both;
}

.navbar.navbar-inverse {
  background: url('/assets/dark_fish_skin.png');
  border-radius: 0;
  box-shadow: 0px 1px 3px #2a2a2a;
  margin-bottom: 0;
}

.booyah-box {
  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
  box-shadow: 1px 1px 2px 0 #d0d0d0;
  background: #fff;
  border: 1px solid #ccc;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  margin-top: 10px;
  margin-bottom: 15px;
  padding: 20px;
}

.navbar-inverse .navbar-brand {
  color: #FFF;
  font-family: 'ostrich_sans_roundedmedium', sans-serif;
  font-size: 26px;
}

.hungry-heart {
  color: red;
  font-size: 22px;
}

.pagination .pagination-lg {
  font-family: 'Helvetica Neue', sans-serif;
}

.pagination > li > a {
  color: black;
}

.pagination > .active > a, .pagination > .active > a:hover {
  background-color: black;
  border-color: black;
}

.glyphicon-plus-sign {
  color: white;
}

.field_with_errors {
  color: #ff3333;
  background-color: #FFEEEE;
  border-radius: 3px;
  padding: 8px;
}

#map {
  height: 300px;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}

.places-img {
  width: 100%;
}

.carousel-inner > .item > img, .carousel-inner > .item > a > img {
    height: 550px;
    width: 100%;
}

.carousel-caption {
    font-family: 'Helvetica Neue', Helvetica, sans-serif;
    font-size: 60px;
    font-weight: 100;
    text-shadow: rgba(0,0,0,0.95) 2px 2px;
    background-color: rgba(0,0,0,0.5);
    width: 100%;
    position: absolute;
    left: 0;
}

.carousel {
  box-shadow: 0px 3px 8px #2a2a2a;
}

.profile-img {
  width: 50%;
}

